# fourlegs_griphis

./: .#fourlegs_griphis_full.body  CMakeLists.txt  FixedJointController.cpp  FourLegsController.cpp  GriphisWalker.cpp  JoystickWalkController.cpp  fourlegs_griphis.body  fourlegs_griphis.cnoid  fourlegs_griphis_light.body  fourlegs_griphis_log-log.cnoid  fullgriphis.cnoid  package.xml
fourlegs_griphis_log-log/HVAC2023_athletics_field/: HVAC2023_athletics_field.body
fourlegs_griphis_log-log/fourlegs_griphis/: fourlegs_griphis.body
griphis_xacro_stl/: CMakeLists.txt  package.xml
griphis_xacro_stl/config/: joint_names_griphis_xacro_stl.yaml
griphis_xacro_stl/launch/: display.launch  gazebo.launch
griphis_xacro_stl/meshes/: base_link.STL  gripper-cp1.STL  gripper-cp2.STL  mid_pitch_1_link.STL  mid_pitch_2_link.STL  nail-cp1.STL  nail-cp2.STL  nail1_1_link.STL  nail1_2_link.STL  nail2_1_link.STL  nail2_2_link.STL  nail3_1_link.STL  nail3_2_link.STL  nail4_1_link.STL  nail4_2_link.STL  nailring1-cp1.STL  nailring1-cp2.STL  nailring1-cp3.STL  nailring1-cp4.STL  nailring2-cp1.STL  nailring2-cp2.STL  nailring2-cp3.STL  nailring2-cp4.STL  pitch_1_link.STL  pitch_2_link.STL  roll_1_link.STL  roll_2_link.STL  worm_1_link.STL  worm_2_link.STL  yaw_1_link.STL  yaw_2_link.STL
griphis_xacro_stl/urdf/: fourlegs_griphis.urdf  fourlegs_griphis.xacro  griphis_xacro_stl.csv  griphis_xacro_stl.urdf  griphis_xacro_stl_assem_sample.xacro  griphis_xacro_stl_gripper1.urdf  griphis_xacro_stl_gripper1_modularized.xacro
(+2 files in other folders)
